<resources>
    <string name="app_name">My Application</string>
    <string name="title">Carro Eletrico</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">potencia</string>
    <string name="recarga">recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="_23_min">23 min</string>
    <string name="_540cv">540cv</string>
    <string name="_300_vwc">300 vWc</string>
    <string name="r_200_000">R$ 200.000</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="ops_internet_nao_disponivel">Ops. internet não disponivel</string>
    <string name="response_erro">Algo deu errado por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
</resources>