<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:src="@drawable/jetta"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_carros" />

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/carros"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />


    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/favoritos"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:layout_marginLeft="16dp"

        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 200.000"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintLeft_toRightOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        android:layout_marginLeft="16dp"

        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 vWc"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_value"
        app:layout_constraintLeft_toRightOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        android:layout_marginLeft="16dp"

        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="540cv"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria_value"
        app:layout_constraintLeft_toRightOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        android:layout_marginLeft="16dp"

        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia_value"
        app:layout_constraintLeft_toRightOf="@id/tv_preco"/>

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLines="10"
        app:layout_constraintTop_toBottomOf="@id/tv_recarga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
        app:layout_constraintEnd_toEndOf="@id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"/>

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular"

            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
            app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
            app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"/>

</androidx.constraintlayout.widget.ConstraintLayout>

