<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="24dp"
        android:paddingBottom="16dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="300dp"
                android:layout_height="130dp"
                android:src="@drawable/jetta"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/preco"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/r_200_000"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/bateria"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/_300_vwc"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_preco_value" />

            <TextView
                android:id="@+id/tv_potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/potencia"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/_540cv"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria_value" />

            <TextView
                android:id="@+id/tv_recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recarga"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/_23_min"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia_value" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>